--- a/res/layout/activity_todo.xml
+++ b/res/layout/activity_todo.xml
@@ -1,8 +1,41 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sreesharp.simpletodo.TodoActivity"
-    tools:ignore="MergeRootFrame" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.sreesharp.simpletodo.TodoActivity$PlaceholderFragment" >
+
+    <ListView
+        android:id="@+id/lvItems"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </ListView>
+
+    <EditText
+        android:id="@+id/etNewItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/lvItems"
+        android:layout_below="@+id/lvItems"
+        android:layout_marginTop="14dp"
+        android:hint="Enter new Item"
+        android:ems="10" >
+    </EditText>
+
+    <Button
+        android:id="@+id/btnAddItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/etNewItem"
+        android:layout_alignRight="@+id/lvItems"
+        android:layout_alignBaseline="@+id/etNewItem"
+        android:onClick="addTodoItem"
+        android:text="Add" />
+
+</RelativeLayout>
 
