--- a/res/layout/activity_edit_item.xml
+++ b/res/layout/activity_edit_item.xml
@@ -8,33 +8,65 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sreesharp.simpletodo.EditItemActivity$PlaceholderFragment" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit Item Below:"
-        android:textSize="20sp" />
-
     <EditText
         android:id="@+id/etModifiedItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"
         android:ems="10" >
 
         <requestFocus />
     </EditText>
 
-    <Button
-        android:id="@+id/btnSave"
+    <DatePicker
+        android:id="@+id/datePicker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/etModifiedItem"
         android:layout_below="@+id/etModifiedItem"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:onClick="onSubmit"
-        android:text="Save" />
+        android:calendarViewShown="false"
+        android:spinnersShown="true" />
+
+     <RadioGroup
+        android:id="@+id/radioGroup1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/datePicker1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/radio0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="High" />
+
+        <RadioButton
+            android:id="@+id/radio1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Normal" />
+
+        <RadioButton
+            android:id="@+id/radio2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Low" />
+   		 </RadioGroup>
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@+id/radioGroup1"
+            
+            android:layout_centerHorizontal="true"
+            
+            android:onClick="onSubmit"
+            android:text="Save" />
 
 </RelativeLayout>
